--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -14,6 +18,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
   }
